Dark mode fixes

--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -16,10 +16,10 @@
 
                 span {
                     display: inline-block;
+                    background: @builder-control-tooltip-color;
                     color: white;
                     margin: 0 auto;
-                    .border-radius(8px);
-                    background: @builder-control-border-color;
+                    border-radius: 8px;
                     padding: 7px 10px;
                     font-size: 13px;
                     line-height: 100%;
