--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -1,8 +1,9 @@
 @import "../../../../../modules/backend/assets/less/core/boot.less";
 
 @builder-control-border-color: #bdc3c7;
+@builder-control-tooltip-color: #72809d;
 @builder-control-text-color: #95a5a6;
-@builder-hover-color: #2581b8;
+@builder-hover-color: var(--oc-selection);
 
 @import "buildingarea.less";
 @import "controlblueprint.less";
