--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -18,8 +18,8 @@
                     display: inline-block;
                     color: white;
                     margin: 0 auto;
-                    .border-radius(8px);
-                    background: @builder-control-border-color;
+                    border-radius: 8px;
+                    background: @builder-control-tooltip-color;
                     padding: 7px 10px;
                     font-size: 13px;
                     line-height: 100%;
